created get, post methods

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
 
                 <div class="todos-wrapper">
-                    <ul>
+                    <ul class="todolist">
+                        <!-- <li>Todo0</li>
                         <li>Todo1</li>
-                        <li>Todo2</li>
-                        <li>Todo3</li>
+                        <li>Todo2</li> -->
                     </ul>
                 </div>
             </div>
