add nav links get

--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@
         <header>
             <div class="logo">logo</div>
             <div class="links">
-                <ul>
-                    <li>link1</li>
-                    <li>link2</li>
-                    <li>link3</li>
-                </ul>
+                <ul class="headerlist"></ul>
             </div>
             <div class="login">login</div>
         </header>
         <main>
             <aside>
                 <div class="nav">
-                    <ul>
-                        <li>link1</li>
-                        <li>link2</li>
-                        <li>link3</li>
-                    </ul>
+                    <ul class="navlist"></ul>
             </aside>
             <div class="content">
                 <div class="input-wrapper">
@@ -36,11 +28,7 @@
                 </div>
 
                 <div class="todos-wrapper">
-                    <ul class="todolist">
-                        <!-- <li>Todo0</li>
-                        <li>Todo1</li>
-                        <li>Todo2</li> -->
-                    </ul>
+                    <ul class="todolist"></ul>
                 </div>
             </div>
 
